# Clase_SmartPtr

./: .gitignore  CMakeLists.txt  main.cpp
Controller/: ControladorBanco.cpp  ControladorBanco.h
Model/: Banco.cpp  Banco.h  CuentaBancaria.h  Transaccion.h
View/: Consola.cpp  Consola.h
